--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -22,7 +22,9 @@ jobs:
           key: cache-c3dfa2d
 
       - name: prime-cache-c3dfa2d
-        run: echo 'Cache hit: ${{ steps.cache.outputs.cache-hit }}'
+        env:
+          CACHE_HIT: ${{ steps.cache.outputs.cache-hit }}
+        run: echo "Cache hit: $CACHE_HIT"
 
       - name: Install dependencies
         run: npm install --prefer-offline
